# bookstore-fastapi-backend

./: -  .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sonar-project.properties
.omc/state/: hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_load_test_data.py
bamboo-specs/: bamboo.yml  build.sh  docker.sh
docs/: agent-memory.md  implementation-plan.md
scripts/: generate-db-models.sh  generate-models.sh  validate-spec.sh
src/bookstore/: main.py
src/bookstore/api/: books.py  dependencies.py
src/bookstore/config/: database.py  retry.py  security.py  settings.py  telemetry.py
src/bookstore/core/: audit.py  audit_models.py  exceptions.py  logging.py  middleware.py
src/bookstore/models/: book.py  schemas.py
src/bookstore/service/: book_service.py
src/resources/swagger/: openapi.yml
tests/: conftest.py
tests/integration/: test_books_api.py
tests/security/: test_jwt_security.py
tests/unit/: test_book_service.py
